TODO:: fix DateTimePicker

--- a/DataFormProject/DataFormProject.vcxproj
+++ b/DataFormProject/DataFormProject.vcxproj
@@ -140,6 +140,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AddContactForm.resx">
+      <DependentUpon>AddContactForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ContactListForm.resx">
       <DependentUpon>ContactListForm.h</DependentUpon>
     </EmbeddedResource>
