--- a/DataFormProject/DataFormProject.vcxproj
+++ b/DataFormProject/DataFormProject.vcxproj
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Application development in popular integrated development environments © 2023 by Myrsini Stasinou is licensed under CC-BY-4.0 !-->
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
